
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_play"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_load_music"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/select_song"
            android:visible="true" />
    </group>

    <group android:id="@+id/group_file"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_file"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/new_text"
            android:visible="true" />

        <item
            android:id="@+id/nav_save"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/save_text"
            android:visible="true" />

        <item
            android:id="@+id/nav_save_as_file"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/save_as_text"
            android:visible="true" />

        <item
            android:id="@+id/nav_reload"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/reload_text"
            android:visible="true" />
    </group>

    <group android:id="@+id/group_compile"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_show_result"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/compile_result"
            android:visible="true" />
    </group>

    <group android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clear_cache"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/cache_clear"
            android:visible="true" />
        <item
            android:id="@+id/nav_help"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/show_help"
            android:visible="true" />
        <item
            android:id="@+id/nav_license"
            android:checkable="false"
            android:enabled="true"
            android:title="@string/show_license"
            android:visible="true" />

    </group>


</menu>
